# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  gendiff.py  parse.py
gendiff/formats/: formatter.py  get_formats.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json.txt
