[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["88ArtemSmirnov88 <artembanchik@mail.ru>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
